# minicloudservice

./: CoreEngine.h  README.md  accelerators.h  adaptive_cache.h  advanced_packet_processor.h  advanced_synchronization.h  architecture.h  diagnostics.h  distributed_ledger.h  enclave.h  integration.h  jit_compiler.h  lockfree_structures.h  test.cpp
core/kernel/: core_engine.cpp  core_engine.h
include/: config.h  exceptions.h  interfaces.h
include/core/: engine.h
oblachki/core/: CoreEngine.h  accelerators.h  advanced_synchronization.h  diagnostics.h  distributed_ledger.h  distributed_tracing.h
src/core/: engine.cpp
src/hypervisor/: hypervisor_factory.cpp
src/logging/: json_logger.cpp
фыв/: CMakeLists.txt
фыв/include/core/: blockchain_kernel.hpp  cloud_integration.hpp  container_manager.hpp  core_hierarchy.hpp  core_service.hpp  data_storage.hpp  directives.hpp  distributed_engine.hpp  error.hpp  function_wrappers.hpp  kernel_base.hpp  kernel_flags.hpp  kernel_manager.hpp  network_kernel.hpp  parent_kernel.hpp  resource_manager.hpp  smart_pointers.hpp  sync_utils.hpp  system_info.hpp  task_manager.hpp  thread_pool.hpp
фыв/include/core/kernels/: base_kernel.hpp  kernel_logger.hpp  kernel_manager.hpp
фыв/include/core/kernels/high/: high_priority_kernel.hpp
фыв/include/core/kernels/low/: logger.hpp  low_priority_kernel.hpp  resource_manager.hpp  task_manager.hpp
фыв/include/core/kernels/medium/: medium_priority_kernel.hpp
фыв/src/: CMakeLists.txt  main.cpp
фыв/src/core/: CMakeLists.txt  blockchain_kernel.cpp  cloud_integration.cpp  container_manager.cpp  core_service.cpp  data_storage.cpp  distributed_engine.cpp  error.cpp  kernel_base.cpp  kernel_flags.cpp  kernel_manager.cpp  network_kernel.cpp  parent_kernel.cpp  resource_manager.cpp  system_info.cpp  task_manager.cpp  thread_pool.cpp
фыв/src/core/kernels/: kernel_logger.cpp  kernel_manager.cpp
фыв/src/core/kernels/high/: high_priority_kernel.cpp
фыв/src/core/kernels/low/: logger.cpp  low_priority_kernel.cpp  resource_manager.cpp  task_manager.cpp
фыв/src/core/kernels/medium/: medium_priority_kernel.cpp
